--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
   },
   "lib": ["es2015", "es6"],
   "include": ["package.json", "src/"],
-  "exclude": ["node_modules"]
+  "exclude": ["**/*.test.ts", "node_modules", "jest.config.ts"]
 }
