--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,36 +74,42 @@ jobs:
       - name: ✨📦 Install dependencies and run tests
         run: pnpm install-test
 
-  deploy:
+  build:
     name: Deploy
     needs: [lint, unit-tests, prettier]
     runs-on: ubuntu-latest
     steps:
-      - name: 🏗 Setup repo
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - uses: azure/docker-login@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to registry
+        uses: docker/login-action@v1
         with:
-          login-server: simpleapi.azurecr.io
-          username: ${{ secrets.acr_simpleapi_username }}
-          password: ${{ secrets.acr_simpleapi_password }}
+          registry: https://simpleapi.azurecr.io/
+          username: ${{ secrets.AzureAppService_ContainerUsername_630b80184b304875b8bb4a4da58ab8e2 }}
+          password: ${{ secrets.AzureAppService_ContainerPassword_cfbc72ea26c6491c8838d28c0c056669 }}
 
-      - name: Build and push image to ACR
-        id: build-image
-        run: |
-          docker build . -t simpleapi.azurecr.io/simpleapi:${{ github.sha }}
-          docker push simpleapi.azurecr.io/simpleapi:${{ github.sha }}
-
-      - uses: azure/login@v1
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          push: true
+          tags: simpleapi.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_630b80184b304875b8bb4a4da58ab8e2 }}/simpleapi:${{ github.sha }}
+          file: ./Dockerfile
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'simple-api-demo'
-          slot-name: 'production'
-          images: 'simpleapi.azurecr.io/simpleapi:${{ github.sha }}'
+    steps:
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'simple-api-demo'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_1ea8c2eef46f49dea5b448f401664026 }}
+        images: 'simpleapi.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_630b80184b304875b8bb4a4da58ab8e2 }}/simpleapi:${{ github.sha }}'
